Test: Add eqprop test skeleton & Rename solver

--- a/eqprop/notebooks/benchmark.ipynb
+++ b/eqprop/notebooks/benchmark.ipynb
@@ -33,7 +33,7 @@
     "import torch\n",
     "import torch.utils.benchmark as benchmark\n",
     "\n",
-    "A = torch.randn(128, 256)\n",
+    "A = torch.randn(256, 256)\n",
     "d = torch.randn(256)\n",
     "num_threads = torch.get_num_threads()\n",
     "t0 = benchmark.Timer(\n",
@@ -45,6 +45,15 @@
     "    globals={\"d\": d, \"A\": A},\n",
     "    num_threads=num_threads,\n",
     ").blocked_autorange(min_run_time=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(A * d).shape"
    ]
   },
   {
