--- a/eqprop/notebooks/newton_solver.ipynb
+++ b/eqprop/notebooks/newton_solver.ipynb
@@ -264,6 +264,142 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VS scipy.optimize "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "sys.path.append(\"../src\")\n",
+    "sys.path.append(\"../../EP2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setup\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "# load model checkpoint\n",
+    "ckpt = torch.load(\"../logs/train/runs/2023-07-13_17-53-04/checkpoints/epoch_002.ckpt\")\n",
+    "# get weights from lin1 & last layers\n",
+    "w1 = ckpt[\"state_dict\"][\"net.model.lin1.weight\"]\n",
+    "w2 = ckpt[\"state_dict\"][\"net.model.last.weight\"]\n",
+    "# get biases from lin1 & last layers\n",
+    "b1 = ckpt[\"state_dict\"][\"net.model.lin1.bias\"]\n",
+    "b2 = ckpt[\"state_dict\"][\"net.model.last.bias\"]\n",
+    "# get input & output dimensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w1.shape, w2.shape, b1.shape, b2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sample input from MNIST dataset\n",
+    "from src.data.mnist_datamodule import MNISTDataModule\n",
+    "\n",
+    "dm = MNISTDataModule(batch_size=1, data_dir=\"../data\")\n",
+    "dm.setup()\n",
+    "x, y = next(iter(dm.train_dataloader()))\n",
+    "from src.models.eqprop_module import EqPropLitModule\n",
+    "\n",
+    "x = EqPropLitModule.preprocessing_input(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.eqprop.E_minimizer import _stepsolve2\n",
+    "from src.eqprop.eqprop_util import OTS, P3OTS\n",
+    "\n",
+    "dims = [2 * 28 * 28, 128, 10 * 2]\n",
+    "W = [w1, w2]\n",
+    "B = [b1, b2]\n",
+    "v1 = _stepsolve2(x, W, dims, B, i_ext=0, OTS=OTS(), max_iter=30, atol=1e-6)\n",
+    "v2 = _stepsolve2(x, W, dims, B, i_ext=0, OTS=P3OTS(), max_iter=30, atol=1e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timei\n",
+    "_stepsolve2(x, W, [28*28*2, 128, 10*2], B, i_ext=0, OTS=P3OTS(), max_iter=30, atol=1e-7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_stepsolve2(x, W, dims, B, i_ext=0, OTS=OTS(), max_iter=30, atol=1e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size = sum(dims[1:])\n",
+    "# construct the laplacian\n",
+    "paddedG = [torch.zeros(dims[1], size).type_as(x)]\n",
+    "for i, g in enumerate(W[1:]):\n",
+    "    paddedG.append(torch.functional.pad(-g, (sum(dims[1 : i + 1]), sum(dims[2 + i :]))))\n",
+    "\n",
+    "Ll = torch.cat(paddedG, dim=-2)\n",
+    "L = Ll + Ll.mT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yhat = v1.split(dims[1:], dim=1)[1].squeeze()\n",
+    "(yhat[::2] - yhat[1::2]).argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -1078,7 +1214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
