--- a/eqprop/notebooks/configtest.ipynb
+++ b/eqprop/notebooks/configtest.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../src')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -170,85 +180,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import omegaconf\n",
+    "from src.utils import conf_resolvers\n",
+    "omegaconf.OmegaConf.register_new_resolver(\"double_resolver\", conf_resolvers.double_resolver)\n",
+    "omegaconf.OmegaConf.register_new_resolver(\"n_resolver\", conf_resolvers.n_resolver)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hydra import compose, initialize\n",
+    "import pyrootutils\n",
+    "\n",
+    "def get_cfg():\n",
+    "    with initialize(version_base=\"1.2\", config_path=\"../configs\"):\n",
+    "        cfg = compose(config_name=\"train.yaml\", return_hydra_config=True, overrides=[])\n",
+    "        with open_dict(cfg):\n",
+    "            cfg.paths.root_dir = str(pyrootutils.find_root())\n",
+    "            cfg.trainer.max_epochs = 1\n",
+    "            cfg.trainer.limit_train_batches = 0.01\n",
+    "            cfg.trainer.limit_val_batches = 0.1\n",
+    "            cfg.trainer.limit_test_batches = 0.1\n",
+    "            cfg.trainer.accelerator = \"cpu\"\n",
+    "            cfg.trainer.devices = 1\n",
+    "            cfg.datamodule.num_workers = 0\n",
+    "            cfg.datamodule.pin_memory = False\n",
+    "            cfg.datamodule.batch_size = 1\n",
+    "            cfg.extras.print_config = False\n",
+    "            cfg.extras.enforce_tags = False\n",
+    "            cfg.logger = None\n",
+    "\n",
+    "        return cfg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_target_': 'src.data.mnist_datamodule.MNISTDataModule', 'data_dir': '${paths.data_dir}', 'batch_size': 128, 'train_val_test_split': [55000, 5000, 10000], 'num_workers': 0, 'pin_memory': False, 'transform': None}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import hydra\n",
-    "\n",
-    "@hydra.main(config_path=\"configs\", config_name=\"model/mnist\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pytest\n",
-    "import torch.optim as optim\n",
-    "import torch.optim.lr_scheduler as lr_scheduler\n",
-    "\n",
-    "from src.models.components.eqprop_backbone import AnalogEP2\n",
-    "from src.models.eqprop_module import EqPropLitModule\n",
-    "\n",
-    "\n",
-    "@pytest.fixture\n",
-    "def eqprop_model():\n",
-    "    optimizer = optim.Adam(lr=0.001, weight_decay=0.0)\n",
-    "    scheduler = lr_scheduler.ReduceLROnPlateau(mode=\"min\", factor=0.1, patience=10)\n",
-    "    net = AnalogEP2(input_size=2, lin1_size=128, output_size=10)\n",
-    "    model = EqPropLitModule(net, optimizer, scheduler)\n",
-    "    return model\n",
-    "\n",
-    "\n",
-    "def test_optimizer(eqprop_model):\n",
-    "    assert isinstance(eqprop_model.optimizer, optim.Adam)\n",
-    "    assert eqprop_model.optimizer.defaults[\"lr\"] == 0.001\n",
-    "    assert eqprop_model.optimizer.defaults[\"weight_decay\"] == 0.0\n",
-    "\n",
-    "\n",
-    "def test_scheduler(eqprop_model):\n",
-    "    assert isinstance(eqprop_model.scheduler, lr_scheduler.ReduceLROnPlateau)\n",
-    "    assert eqprop_model.scheduler.mode == \"min\"\n",
-    "    assert eqprop_model.scheduler.factor == 0.1\n",
-    "    assert eqprop_model.scheduler.patience == 10\n",
-    "\n",
-    "\n",
-    "def test_net(eqprop_model):\n",
-    "    assert isinstance(eqprop_model.net, AnalogEP2)\n",
-    "    assert eqprop_model.net.input_size == 2\n",
-    "    assert eqprop_model.net.lin1_size == 128\n",
-    "    assert eqprop_model.net.output_size == 10\n",
-    "\n",
-    "\n",
-    "def test_double_input(eqprop_model):\n",
-    "    assert eqprop_model.net.input_size == 4\n",
-    "\n",
-    "\n",
-    "def test_double_output(eqprop_model):\n",
-    "    assert eqprop_model.net.output_size == 20\n",
-    "\n",
-    "\n",
-    "def test_positive_w(eqprop_model):\n",
-    "    assert (eqprop_model.net.w > 0).all()\n",
-    "\n",
-    "\n",
-    "def test_bias(eqprop_model):\n",
-    "    assert eqprop_model.net.b is None\n",
-    "\n",
-    "\n",
-    "def test_clip_weights(eqprop_model):\n",
-    "    assert (eqprop_model.net.w.abs() <= 1).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# instantiate the config"
+    "model = hydra.utils.instantiate(cfg.model)"
    ]
   },
   {
@@ -275,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0rc1"
   },
   "vscode": {
    "interpreter": {
