--- a/eqprop/notebooks/newton_solver.ipynb
+++ b/eqprop/notebooks/newton_solver.ipynb
@@ -66,15 +66,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.models.components.E_minimizer import _stepsolve2"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -351,8 +342,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timei\n",
-    "_stepsolve2(x, W, [28*28*2, 128, 10*2], B, i_ext=0, OTS=P3OTS(), max_iter=30, atol=1e-7)"
+    "%%timeit\n",
+    "_stepsolve2(x, W, [28 * 28 * 2, 128, 10 * 2], B, i_ext=0, OTS=P3OTS(), max_iter=30, atol=1e-7)"
    ]
   },
   {
@@ -1055,7 +1046,6 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn\n",
     "\n",
     "x = torch.rand(1, 1, 8, 8)  # batch size, channels, height, width\n",
     "convlayer = nn.Conv2d(1, 3, 3, 1, bias=False)  # in_channels, out_channels, kernel_size, stride\n",
