refactor: Move i/a/p of OTS into methods & Rename
+Add benchmark results of total power calculation & grad update logic

--- a/eqprop/notebooks/playground.ipynb
+++ b/eqprop/notebooks/playground.ipynb
@@ -228,6 +228,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## broadcasting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "A = torch.rand((2, 3))\n",
+    "v = torch.ones((3))  # row vector\n",
+    "print(A)\n",
+    "print(v)\n",
+    "A += v\n",
+    "print(A)\n",
+    "\n",
+    "v = torch.ones((3))\n",
+    "print(A.T + v)  # error"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -440,6 +466,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "from src.eqprop import eqprop_util\n",
+    "\n",
+    "ots = eqprop_util.OTS()\n",
+    "V = torch.rand((10, 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "ots.a(V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ots.i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@torch.jit.script\n",
+    "def a(\n",
+    "    V: torch.Tensor, Vth: float = 0.026, Vr: float = 0.9, Vl: float = 0.1, Is: float = 1e-8\n",
+    ") -> torch.Tensor:\n",
+    "    admittance = Is / Vth * (torch.exp((V - Vr) / Vth) + torch.exp((-V + Vl) / Vth))\n",
+    "    return admittance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "a(V)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -557,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0rc1"
   },
   "vscode": {
    "interpreter": {
