feat: Add pytorch profiler

--- a/eqprop/notebooks/profile.ipynb
+++ b/eqprop/notebooks/profile.ipynb
@@ -185,6 +185,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note) pytorch lightning provides profiler.\n",
+    "see below links\n",
+    "- https://lightning.ai/docs/pytorch/stable/tuning/profiler_basic.html\n",
+    "- https://lightning.ai/docs/pytorch/stable/tuning/profiler_intermediate.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
