chore: Make w clip configurable & Add docstring

--- a/eqprop/notebooks/benchmark.ipynb
+++ b/eqprop/notebooks/benchmark.ipynb
@@ -275,6 +275,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Add diag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# J[:, : -dims[-1], : -dims[-1]] += torch.einsum(\n",
+    "#     \"bij,bj->bij\", A, L[:, : -dims[-1], : -dims[-dims[-1]]]\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## eqprop grad"
    ]
   },
