--- a/eqprop/notebooks/newton_solver.ipynb
+++ b/eqprop/notebooks/newton_solver.ipynb
@@ -391,6 +391,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.eqprop.eqprop_util import OTS, P3OTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ots = OTS(Vl=-0.5, Vr=0.5)\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# plot the OTS function\n",
+    "import torch\n",
+    "\n",
+    "x = torch.linspace(-1, 1, 100)\n",
+    "plt.plot(ots.i(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "# find the root of the OTS function using Newton's method\n",
+    "from scipy.optimize import newton\n",
+    "\n",
+    "\n",
+    "def f(V):\n",
+    "    return math.exp((V - 0.5) / 0.026) - math.exp((-V + -0.5) / 0.026)\n",
+    "\n",
+    "\n",
+    "newton(f, 0.9)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -500,6 +552,67 @@
     "plt.plot(x, p2, label=\"piecewise linear\")\n",
     "plt.plot(x, p4, label=\"piecewise linear\")\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SymOTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "from src.eqprop.eqprop_util import OTS, P3OTS, SymOTS\n",
+    "\n",
+    "ots = OTS(Vl=-0.5, Vr=0.5)\n",
+    "symots = SymOTS(Vl=-0.5, Vr=0.5)\n",
+    "\n",
+    "x = torch.logspace(-0.01, 0.01, 3000)\n",
+    "\n",
+    "inv_a1 = 1 / ots.a(x)\n",
+    "inv_a2 = 1 / symots.a(x)\n",
+    "inv_a3 = symots.inv_a(x)\n",
+    "\n",
+    "\n",
+    "idiva = ots.i(x) / ots.a(x)\n",
+    "idiva2 = symots.i_div_a(x)\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# plt.plot(x, idiva, label=\"exponential\")\n",
+    "plt.plot(x, idiva2 - idiva, label=\"exponential\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxmexp(V):\n",
+    "    xr = (V - 0.5) / 0.026\n",
+    "    xl = (-V - 0.5) / 0.026\n",
+    "    xmax = torch.max(xr, xl)\n",
+    "    return 0.026 * (\n",
+    "        (torch.exp(xr - xmax) - torch.exp(xl - xmax))\n",
+    "        / (torch.exp(xr - xmax) + torch.exp(xl - xmax))\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(x, maxmexp(x) - idiva2, label=\"exponential\")"
    ]
   },
   {
@@ -1204,7 +1317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
