--- a/eqprop/notebooks/playground.ipynb
+++ b/eqprop/notebooks/playground.ipynb
@@ -254,6 +254,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "A = torch.rand((2, 3, 3))\n",
+    "iden = torch.eye(3)\n",
+    "\n",
+    "print(A + iden)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -640,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
