refactor: make solver compatible to torch nn.module
Apply singleton pattern to EqPropSolver
Clear complex DI methods across nn.module/EqPropSolver/Strategy.
All augs set up at instantiate time thru hydra except for model argument
Separate strategies from solver.py

Closes #40

--- a/eqprop/notebooks/playground.ipynb
+++ b/eqprop/notebooks/playground.ipynb
@@ -268,6 +268,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = torch.arange(8).reshape(2, 4)\n",
+    "# repeat v along the last dimension\n",
+    "v.repeat(2, 1, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = torch.ones((2, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A + v.float().mean(dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v.float().mean(dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v.pow(2).float().mean(dim=0).unsqueeze(-1).expand_as(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lin = torch.nn.Linear(3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lin.weight.shape"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -628,6 +693,35 @@
     "# or equivalently (and avoiding a copy),\n",
     "# out = out_unf.view(1, 2, 7, 8)\n",
     "(torch.nn.functional.conv2d(inp, w) - out).abs().max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.models.components.vgg11 import VGG11\n",
+    "\n",
+    "model = VGG11()\n",
+    "[print(m) for m in model.features.children()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name, param in model.named_parameters():\n",
+    "    print(name, param.shape)"
    ]
   },
   {
