--- a/eqprop/notebooks/benchmark.ipynb
+++ b/eqprop/notebooks/benchmark.ipynb
@@ -284,9 +284,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# J[:, : -dims[-1], : -dims[-1]] += torch.einsum(\n",
-    "#     \"bij,bj->bij\", A, L[:, : -dims[-1], : -dims[-dims[-1]]]\n",
-    "# )"
+    "# update diag elements in batched matrix\n",
+    "import torch\n",
+    "\n",
+    "A = torch.ones(2, 3, 3)\n",
+    "v = torch.ones(2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "A.diagonal(dim1=1, dim2=2)[:] += v"
    ]
   },
   {
@@ -453,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
