doc: Add scipy solver notebook

--- a/eqprop/notebooks/newton_solver.ipynb
+++ b/eqprop/notebooks/newton_solver.ipynb
@@ -267,18 +267,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "\n",
-    "sys.path.append(\"../src\")\n",
-    "sys.path.append(\"../../EP2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# setup\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -387,22 +375,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from src.eqprop.eqprop_util import OTS, P3OTS"
    ]
   },
@@ -412,15 +384,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ots = OTS(Vl=-0.5, Vr=0.5)\n",
-    "\n",
+    "ots = OTS(Vl=-0, Vr=0, Is=1e-6, Vth=0.026)\n",
+    "p3ots = P3OTS(Vl=-0, Vr=0, Is=1e-6, Vth=0.026)\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# plot the OTS function\n",
     "import torch\n",
     "\n",
     "x = torch.linspace(-1, 1, 100)\n",
-    "plt.plot(ots.i(x))"
+    "plt.plot(x, ots.i(x))"
    ]
   },
   {
@@ -429,17 +401,182 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
+    "import numpy as np\n",
+    "import torch\n",
     "\n",
     "# find the root of the OTS function using Newton's method\n",
-    "from scipy.optimize import newton\n",
+    "from scipy.optimize import fsolve, root\n",
     "\n",
     "\n",
-    "def f(V):\n",
-    "    return math.exp((V - 0.5) / 0.026) - math.exp((-V + -0.5) / 0.026)\n",
+    "def np_wrapper(x: np.ndarray):\n",
+    "    x = torch.tensor(x)\n",
+    "    return p3ots.i(x).detach().numpy()\n",
     "\n",
     "\n",
-    "newton(f, 0.9)"
+    "x0 = np.random.rand(1000) * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "res, info, _, __ = fsolve(np_wrapper, x0=x, full_output=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "residuals_history = {}\n",
+    "duration_history = {}\n",
+    "methods = [\n",
+    "    \"krylov\",\n",
+    "    \"df-sane\",\n",
+    "]  # , 'broyden1', 'broyden2', 'anderson', 'linearmixing', 'diagbroyden', 'excitingmixing']\n",
+    "\n",
+    "\n",
+    "def callback(residual, method):\n",
+    "    if method not in residuals_history:\n",
+    "        residuals_history[method] = []\n",
+    "        duration_history[method] = []\n",
+    "        t = time.time()\n",
+    "    new_t = time.time() - t\n",
+    "    duration_history[method].append(new_t)\n",
+    "    residuals_history[method].append(np.linalg.norm(residual, ord=np.inf))\n",
+    "    t = time.time()\n",
+    "\n",
+    "\n",
+    "def modified_callback(x, residual=None, method=None):\n",
+    "    if residual is None:\n",
+    "        residual = x\n",
+    "    callback(residual, method)\n",
+    "\n",
+    "\n",
+    "for method in methods:\n",
+    "    residuals_history[method] = []  # Reset the residuals history for each method\n",
+    "    try:\n",
+    "        sol = root(\n",
+    "            np_wrapper,\n",
+    "            np.random.rand(10),\n",
+    "            method=method,\n",
+    "            callback=lambda x, res=None: modified_callback(x, res, method),\n",
+    "            options={\"fatol\": 1e-7, \"disp\": True},\n",
+    "        )\n",
+    "    except Exception:\n",
+    "        # Some methods might still not accept the callback or might throw other errors\n",
+    "        print(f\"skip {method}\")\n",
+    "\n",
+    "# Plotting the residuals at each step\n",
+    "plt.figure(figsize=(14, 7))\n",
+    "# colors = plt.cm.get_cmap('tab10').colors\n",
+    "for idx, (method, res) in enumerate(residuals_history.items()):\n",
+    "    if res:  # Only plot methods that have residuals recorded\n",
+    "        # delete outliers\n",
+    "        t = np.array(duration_history[method])\n",
+    "        res = np.array(res)\n",
+    "        res[res > 1e4] = np.nan\n",
+    "        res = res[~np.isnan(res)]\n",
+    "        plt.plot(t, res, label=method, marker=\"o\", markersize=5)\n",
+    "\n",
+    "\n",
+    "plt.yscale(\"log\")\n",
+    "plt.xlabel(\"Step\")\n",
+    "plt.ylabel(\"Residual\")\n",
+    "plt.title(\"Convergence of Residuals for Different Methods\")\n",
+    "plt.legend(loc=\"best\")\n",
+    "plt.grid(True, which=\"both\", ls=\"--\", linewidth=0.5)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import time\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from scipy.optimize import root\n",
+    "\n",
+    "\n",
+    "# Define the function using numpy again\n",
+    "def i_numpy(x):\n",
+    "    x = torch.tensor(x)\n",
+    "    return p3ots.i(x).detach().numpy()\n",
+    "\n",
+    "\n",
+    "# Define the methods to test\n",
+    "methods_to_test = [\"hybr\", \"lm\", \"df-sane\", \"krylov\"]\n",
+    "\n",
+    "\n",
+    "def maxiter_method(method):\n",
+    "    if method in [\"krylov\", \"lm\"]:\n",
+    "        return {\"maxiter\": 7 if method == \"krylov\" else 10}\n",
+    "    elif method in [\"hybr\", \"df-sane\"]:\n",
+    "        return {\"maxfev\": 1500 if method == \"df-sane\" else 40}\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "\n",
+    "# Find roots and record the elapsed time and final residuals again\n",
+    "elapsed_time_results = {}\n",
+    "residuals_results = {}\n",
+    "\n",
+    "for method in methods_to_test:\n",
+    "    start_time = time.time()\n",
+    "    sol = root(i_numpy, x0=np.random.rand(100) * 2, method=method, options=maxiter_method(method))\n",
+    "    end_time = time.time()\n",
+    "\n",
+    "    elapsed_time_results[method] = end_time - start_time\n",
+    "    residuals_results[method] = np.abs(sol.fun[0])\n",
+    "\n",
+    "# Plotting the results again\n",
+    "fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(12, 12))\n",
+    "\n",
+    "ax1.bar(\n",
+    "    elapsed_time_results.keys(),\n",
+    "    elapsed_time_results.values(),\n",
+    "    color=[\"blue\", \"red\", \"green\", \"purple\"],\n",
+    ")\n",
+    "ax1.set_ylabel(\"Elapsed Time (seconds)\")\n",
+    "ax1.set_title(\"Elapsed Time for Different Methods\")\n",
+    "\n",
+    "ax2.bar(\n",
+    "    residuals_results.keys(), residuals_results.values(), color=[\"blue\", \"red\", \"green\", \"purple\"]\n",
+    ")\n",
+    "ax2.set_yscale(\"log\")\n",
+    "ax2.set_ylabel(\"Final Residuals\")\n",
+    "ax2.set_title(\"Final Residuals for Different Methods\")\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ScipyStrategy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.eqprop.strategy import ScipyStrategy\n",
+    "\n",
+    "st = ScipyStrategy()"
    ]
   },
   {
@@ -1317,7 +1454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
