--- a/eqprop/notebooks/scipy_solver.ipynb
+++ b/eqprop/notebooks/scipy_solver.ipynb
@@ -33,18 +33,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dummy example\n",
-    "batch_size = 32\n",
-    "dims = [784, 100, 20]\n",
+    "# setup parameters\n",
+    "batch_size = 4\n",
+    "dims = [784 * 2, 128, 10 * 4]\n",
     "hdims = dims[1:]\n",
-    "x = np.random.rand(batch_size, dims[0])\n",
+    "\n",
+    "ots = P3OTS(Is=1e-6, Vth=1, Vl=0, Vr=0)\n",
+    "i_ext = np.zeros((batch_size, dims[-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setup random weights and biases\n",
     "W, B = [], []\n",
     "for i in range(len(dims) - 1):\n",
-    "    W.append(np.random.rand(dims[i], dims[i + 1]).T)\n",
+    "    W.append(np.random.rand(dims[i], dims[i + 1]).T)  # random input in [0, 1]\n",
     "    B.append(np.random.rand(dims[i + 1]))\n",
-    "# i_ext = np.random.rand(batch_size, dims[-1])\n",
-    "i_ext = np.zeros((batch_size, dims[-1]))\n",
-    "ots = P3OTS(Is=1e-6, Vth=1, Vl=0, Vr=0)\n",
+    "\n",
     "B = np.concatenate(B, axis=-1)"
    ]
   },
@@ -54,9 +63,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load from model ckpt\n",
-    "ckpt_path = \".ckpt\"\n",
-    "ckpt = torch.load(ckpt_path, weights_only=True, map_location=\"cpu\")"
+    "ckpt_path = \"../logs/train/runs/2023-10-18_09-15-18/checkpoints/last.ckpt\"\n",
+    "ckpt = torch.load(ckpt_path, map_location=\"cpu\")\n",
+    "ckpt[\"state_dict\"]\n",
+    "W, B = [], []\n",
+    "for k, v in ckpt[\"state_dict\"].items():\n",
+    "    if \"weight\" in k:\n",
+    "        W.append(v.numpy())\n",
+    "    elif \"bias\" in k:\n",
+    "        B.append(v.numpy())\n",
+    "B_cat = np.concatenate(B, axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dummy example\n",
+    "x = np.random.rand(batch_size, dims[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load mnist data\n",
+    "from src.data.mnist_datamodule import MNISTDataModule\n",
+    "\n",
+    "dm = MNISTDataModule(data_dir=\"../data/\", batch_size=batch_size)\n",
+    "dm.setup()\n",
+    "x, y = dm.train_dataloader().__iter__().__next__()\n",
+    "x = x.view(x.size(0), -1)  # == x.view(-1,x.size(-1)**2)\n",
+    "x = x.repeat_interleave(2, dim=1)\n",
+    "x[:, 1::2] = -x[:, ::2]\n",
+    "x = x.numpy()\n",
+    "y = y.numpy()"
    ]
   },
   {
@@ -114,7 +159,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v0 = np.linalg.solve(_lap(W), B)"
+    "v0 = np.linalg.solve(_lap(W), B_cat)\n",
+    "sol_arr = np.empty((batch_size, sum(dims[1:])), dtype=np.float32)"
    ]
   },
   {
@@ -123,18 +169,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%timeit\n",
     "for batch_idx in range(batch_size):\n",
     "    sol, info, _, msg = fsolve(\n",
-    "        f, v0, fprime=jac, args=(x[batch_idx], W, B, i_ext[batch_idx]), full_output=True\n",
+    "        f, v0, fprime=jac, args=(x[batch_idx], W, B_cat, i_ext[batch_idx]), full_output=True\n",
     "    )\n",
-    "    # print(msg)"
+    "    sol_arr[batch_idx] = sol\n",
+    "    print(msg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# compare with newton solver"
+    "# compare with newton strategy"
    ]
   },
   {
@@ -143,7 +191,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load model"
+    "W_t = [torch.from_numpy(w) for w in W]\n",
+    "B_t = [torch.from_numpy(b) for b in B]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set pylogger to debug to see the convergence\n",
+    "import logging\n",
+    "from venv import logger\n",
+    "\n",
+    "from src.eqprop.strategy import NewtonStrategy\n",
+    "\n",
+    "logger.setLevel(logging.DEBUG)\n",
+    "\n",
+    "strategy = NewtonStrategy(clip_threshold=1, max_iter=10, atol=1e-6, activation=ots)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_sol = strategy.solve(torch.from_numpy(x), torch.from_numpy(i_ext), params=(W_t, B_t), dims=hdims)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_sol = torch.cat(n_sol, dim=-1).numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute cosine similarity between sol and v0\n",
+    "from scipy.spatial.distance import cosine\n",
+    "\n",
+    "cosine(sol, v0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cosine(n_sol[-1], sol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualize solutione\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.plot(sol, label=\"sol\")\n",
+    "plt.plot(v0, label=\"v0\")\n",
+    "plt.plot(n_sol[-1], label=\"n_sol\")\n",
+    "plt.legend()"
    ]
   },
   {
