feat: Add Pinv strategy & reformat by pre-commit
linear solve + one step pseudoinverse nonlinearity correction

--- a/eqprop/notebooks/playground.ipynb
+++ b/eqprop/notebooks/playground.ipynb
@@ -602,6 +602,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "A = torch.rand((10, 5))\n",
+    "\n",
+    "b = torch.rand((20, 5))\n",
+    "A.unsqueeze(0).expand_as(b).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A.expand(20, -1, -1) @ b.unsqueeze(-1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -748,7 +771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0rc1"
   },
   "vscode": {
    "interpreter": {
