--- a/eqprop/notebooks/scipy_solver.ipynb
+++ b/eqprop/notebooks/scipy_solver.ipynb
@@ -38,7 +38,7 @@
     "dims = [784 * 2, 128, 10 * 4]\n",
     "hdims = dims[1:]\n",
     "\n",
-    "ots = P3OTS(Is=1e-6, Vth=1, Vl=0, Vr=0)\n",
+    "ots = OTS(Is=1e-6, Vth=0.2, Vl=0, Vr=0)\n",
     "i_ext = np.zeros((batch_size, dims[-1]))"
    ]
   },
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ckpt_path = \"../logs/train/runs/2023-10-18_09-15-18/checkpoints/last.ckpt\"\n",
+    "ckpt_path = \"../logs/train/runs/2023-11-19_17-59-54/checkpoints/last.ckpt\"\n",
     "ckpt = torch.load(ckpt_path, map_location=\"cpu\")\n",
     "ckpt[\"state_dict\"]\n",
     "W, B = [], []\n",
@@ -96,7 +96,16 @@
     "\n",
     "dm = MNISTDataModule(data_dir=\"../data/\", batch_size=batch_size)\n",
     "dm.setup()\n",
-    "x, y = dm.train_dataloader().__iter__().__next__()\n",
+    "dl = dm.train_dataloader().__iter__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = dl._next_data()\n",
     "x = x.view(x.size(0), -1)  # == x.view(-1,x.size(-1)**2)\n",
     "x = x.repeat_interleave(2, dim=1)\n",
     "x[:, 1::2] = -x[:, ::2]\n",
@@ -159,8 +168,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v0 = np.linalg.solve(_lap(W), B_cat)\n",
-    "sol_arr = np.empty((batch_size, sum(dims[1:])), dtype=np.float32)"
+    "# expand B_cat to batch size\n",
+    "v0_arr = np.empty((batch_size, sum(dims[1:])), dtype=np.float64)\n",
+    "for i in range(batch_size):\n",
+    "    B_init = B_cat.copy()\n",
+    "    B_init[: hdims[0]] += x[i] @ W[0].T\n",
+    "    v0_arr[i] = np.linalg.solve(_lap(W), B_init)\n",
+    "sol_arr = np.empty((batch_size, sum(dims[1:])), dtype=np.float64)"
    ]
   },
   {
@@ -169,13 +183,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit\n",
     "for batch_idx in range(batch_size):\n",
     "    sol, info, _, msg = fsolve(\n",
-    "        f, v0, fprime=jac, args=(x[batch_idx], W, B_cat, i_ext[batch_idx]), full_output=True\n",
+    "        f,\n",
+    "        v0_arr[batch_idx],\n",
+    "        fprime=jac,\n",
+    "        args=(x[batch_idx], W, B_cat, i_ext[batch_idx]),\n",
+    "        full_output=True,\n",
     "    )\n",
     "    sol_arr[batch_idx] = sol\n",
     "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info"
    ]
   },
   {
@@ -209,7 +235,8 @@
     "\n",
     "logger.setLevel(logging.DEBUG)\n",
     "\n",
-    "strategy = NewtonStrategy(clip_threshold=1, max_iter=10, atol=1e-6, activation=ots)"
+    "strategy = NewtonStrategy(clip_threshold=1, max_iter=100, atol=1e-6, activation=ots)\n",
+    "strategy.check_and_set_attrs({\"dims\": hdims})"
    ]
   },
   {
@@ -218,16 +245,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sol = strategy.solve(torch.from_numpy(x), torch.from_numpy(i_ext), params=(W_t, B_t), dims=hdims)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_sol = torch.cat(n_sol, dim=-1).numpy()"
+    "# n_sol = strategy.solve(torch.from_numpy(x), torch.from_numpy(i_ext), params=(W_t, B_t), dims=hdims)\n",
+    "# n_sol = torch.cat(n_sol, dim=-1).numpy()\n",
+    "n_sol = strategy._densecholsol(torch.from_numpy(x), W_t, B_t).numpy()"
    ]
   },
   {
@@ -243,10 +263,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compute cosine similarity between sol and v0\n",
+    "# compute cosine distance (1-cosine similarity) between sol and v0\n",
     "from scipy.spatial.distance import cosine\n",
     "\n",
-    "cosine(sol, v0)"
+    "cosine(sol_arr[-1], v0_arr[-1])"
    ]
   },
   {
@@ -255,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cosine(n_sol[-1], sol)"
+    "cosine(n_sol[-1], sol_arr[-1])"
    ]
   },
   {
@@ -264,13 +284,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visualize solutione\n",
+    "# visualize solution\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.plot(sol, label=\"sol\")\n",
-    "plt.plot(v0, label=\"v0\")\n",
+    "plt.plot(sol_arr[-1], label=\"sol\")\n",
+    "plt.plot(v0_arr[-1], label=\"v0\")\n",
     "plt.plot(n_sol[-1], label=\"n_sol\")\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(sol_arr[-1] - v0_arr[-1], label=\"err\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## linear sol + correction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "instead of solving $Lv=b-f(v)$ iteratively, we can solve $Lv=b$ and then correct the solution by adding $-L^\\dagger f(v)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cor = np.linalg.pinv(_lap(W)) @ ots.i(torch.from_numpy(v0_arr[-1])).numpy()\n",
+    "plt.plot(cor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(sol_arr[-1], label=\"sol\", marker=\"o\")\n",
+    "plt.plot(v0_arr[-1] - cor, label=\"v_cor\")\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(sol_arr[-1] - v0_arr[-1] + cor, label=\"err\", marker=\"o\")"
    ]
   },
   {
